[cleanup] Typos & code quality fixes.
Signed-off-by: Étienne Bausson <etienne.bausson@obeosoft.com>